# DecoyEffectPaperExperiment2

./: README.md  paper.docx  paper.txt  pyproject.toml  run_experiment.py
experiments/: baseline.json  decoy_sensitive.json  default_python.json  paper_friendly.json  paper_guided_prm.json  pcspe_smoke.json  resource_constrained.json  traim_capacity_limited.json
outputs_pcspe_disabled_smoke/: DIM_PRM_算法实现说明.md  audit_notes.md  paper_results.json  summary.csv  summary.json
outputs_pcspe_disabled_smoke/csv/: common_task_ratios.csv  dim_parameter_analysis.csv  dim_preference_mean_effect.csv  dim_selection_counts.csv  dim_strategy_compare.csv  mechanism_participants.csv  prm_preference_mean_effect.csv  toca_task_results.csv  utility_task_25.csv  validations.csv
outputs_pcspe_disabled_smoke/figures/: index.html
outputs_pcspe_smoke/: DIM_PRM_算法实现说明.md  audit_notes.md  paper_results.json  summary.csv  summary.json
outputs_py/: DIM_PRM_算法实现说明.md  audit_notes.csv  audit_notes.md  paper_results.json  summary.csv  summary.json
outputs_py/figures/: index.html
outputs_toca_fig42_smoke/: audit_notes.csv  audit_notes.md  paper_results.json  summary.csv  summary.json
outputs_toca_smoke/: DIM_PRM_算法实现说明.md  audit_notes.csv  audit_notes.md  paper_results.json  summary.csv  summary.json
outputs_toca_smoke2/: DIM_PRM_算法实现说明.md  audit_notes.md  paper_results.json  summary.json
repro/: __init__.py  dim.py  experiment.py  formulas.py  models.py  pcspe.py  platform.py  pmmra.py  prm.py  random_utils.py  svg.py  toca.py  traim.py
scripts/: extract_docx_text.py  plot_results.py
(+114 files in other folders)
